--- a/public/assets/css/additional.css
+++ b/public/assets/css/additional.css
@@ -1,129 +1,136 @@
 .searchBox {
-  display: none;
-  width: 40vw;
-  align-items: center;
-  justify-content: space-between;
-  gap: 8px;
-  background: #21252908;
-  border: 2px solid var(--nav-hover-color);
-  border-radius: 50px;
-  position: relative;
+    display: none;
+    width: 40vw;
+    align-items: center;
+    justify-content: space-between;
+    gap: 8px;
+    background: #21252908;
+    border: 2px solid var(--nav-hover-color);
+    border-radius: 50px;
+    position: relative;
 }
 
 .searchButton i {
-  color: orange;
-  font-weight: bold;
+    color: orange;
+    font-weight: bold;
 }
 
 .scrolled .searchButton i {
-  color: #fff;
+    color: #fff;
 }
 .typed-text {
-  overflow: hidden;
-  width: 10ch;
-  border-right: 0.15em solid orange; /* Efek cursor typing */
-  white-space: nowrap;
-  animation: typing 1s steps(10), blink-caret 1s step-end infinite;
+    overflow: hidden;
+    width: 10ch;
+    border-right: 0.15em solid orange; /* Efek cursor typing */
+    white-space: nowrap;
+    animation: typing 1s steps(10), blink-caret 1s step-end infinite;
 }
 
 .shopCart {
-  margin-right: 10px;
-  border: 2px solid var(--nav-hover-color);
+    margin-right: 10px;
+    border: 2px solid var(--nav-hover-color);
 }
 
 .shopCart i {
-  color: var(--nav-hover-color);
+    color: var(--nav-hover-color);
 }
 
 .but-login,
 .but-logout {
-  border: 2px solid var(--nav-hover-color);
-  color: white;
+    border: 2px solid var(--nav-hover-color);
+    color: white;
 }
 .splide__slide {
-  height: 70vh;
-  width: 100vw;
+    height: 70vh;
+    width: 100vw;
 }
 .splide__slide img {
-  width: 100%;
-  max-height: 100%;
-  object-fit: fill;
+    width: 100%;
+    max-height: 100%;
+    object-fit: fill;
 }
 #image-carousel {
-  margin-top: -3rem;
-  height: 70vh;
+    margin-top: -3rem;
+    height: 70vh;
 }
 .but-login:hover,
 .but-logout:hover {
-  color: white;
+    color: white;
 }
 .scrolled .but-login:hover,
 .scrolled .but-logout:hover,
 .scrolled .but-login,
 .scrolled .but-logout {
-  color: var(--nav-hover-color);
+    color: var(--nav-hover-color);
 }
 #hero form {
-  justify-content: space-between;
-  gap: 40px;
+    justify-content: space-between;
+    gap: 40px;
 }
 #hero form #shopnow,
 #hero form #loginBut {
-  width: 50%;
+    width: 50%;
+}
+
+.searchBox {
+    border: 2px solid black;
+}
+.scrolled .searchBox {
+    border: 2px solid var(--nav-color);
 }
 @keyframes typing {
-  from {
-    width: 0ch;
-  }
-  to {
-    width: 100%;
-  }
+    from {
+        width: 0ch;
+    }
+    to {
+        width: 100%;
+    }
 }
 
 @keyframes blink-caret {
-  from,
-  to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: var(--nav-hover-color);
-  }
+    from,
+    to {
+        border-color: transparent;
+    }
+    50% {
+        border-color: var(--nav-hover-color);
+    }
 }
 .searchButton {
-  color: white;
-  position: absolute;
-  right: 8px;
-  top: 6px;
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  background: var(--nav-hover-color);
-  border: 0;
-  display: inline-block;
-  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+    color: white;
+    position: absolute;
+    right: 8px;
+    top: 6px;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background: var(--nav-hover-color);
+    border: 0;
+    display: inline-block;
+    transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 /*hover effect*/
 button:hover {
-  color: #fff;
-  background-color: #1a1a1a;
-  box-shadow: rgba(0, 0, 0, 0.5) 0 10px 20px;
-  transform: translateY(-3px);
+    color: #fff;
+    background-color: #1a1a1a;
+    box-shadow: rgba(0, 0, 0, 0.5) 0 10px 20px;
+    transform: translateY(-3px);
 }
 /*button pressing effect*/
 button:active {
-  box-shadow: none;
-  transform: translateY(0);
+    box-shadow: none;
+    transform: translateY(0);
 }
 
 .searchInput {
-  border: none;
-  background: none;
-  width: 100%;
-  height: 24px;
-  outline: none;
-  color: var(--nav-color);
-  font-size: 15px;
-  padding: 24px 46px 24px 26px;
+    border: none;
+    background: none;
+    width: 100%;
+    height: 24px;
+    outline: none;
+    color: black;
+    font-size: 15px;
+    padding: 24px 46px 24px 26px;
 }
 
 /* saat tombol search dipencet*/
